#1 - added --proxy param, minor fixes in README.md - signed-off-by: trimstray <contact@nslab.at>

--- a/doc/man8/multitor.8
+++ b/doc/man8/multitor.8
@@ -32,6 +32,8 @@ A tool that allows you to create multiple Tor instances. In addition, it allows 
 --control-port <port_num>
         set control port number
 
+--proxy
+        set tor load balancer
 .SH SEE ALSO
 https://github.com/trimstray/multitor
 .SH BUGS
