updated descriptions in man page - signed-off-by: trimstray <contact@nslab.at>

--- a/doc/man8/multitor.8
+++ b/doc/man8/multitor.8
@@ -2,11 +2,11 @@
 .\" Contact contact@nslab.at.
 .TH man 8 "21.01.2018" "1.0.0" "multitor man page"
 .SH NAME
-multitor \- create multiple Tor instances
+multitor \- create multiple TOR instances.
 .SH SYNOPSIS
 multitor <option|long-option>
 .SH DESCRIPTION
-A tool that allows you to create multiple Tor instances. In addition, it allows you to view previously started Tor processes and create a new identity for each of them.
+A tool that lets you create multiple TOR instances with a load balancing traffic between them. In addition, you can view previously running TOR processes and create a new identity for all or selected processes.
 .SH OPTIONS
 --help
         show this message
