updated man page - signed-off-by: trimstray <contact@nslab.at>

--- a/doc/man8/multitor.8
+++ b/doc/man8/multitor.8
@@ -1,8 +1,8 @@
 .\" Manpage for multitor.
 .\" Contact contact@nslab.at.
-.TH man 8 "21.01.2018" "1.0.0" "multitor man page"
+.TH man 8 "21.01.2018" "1.2.0" "multitor man page"
 .SH NAME
-multitor \- create multiple TOR instances.
+multitor \- create multiple TOR instances
 .SH SYNOPSIS
 multitor <option|long-option>
 .SH DESCRIPTION
