changed --proxy short description - signed-off-by: trimstray <contact@nslab.at>

--- a/doc/man8/multitor.8
+++ b/doc/man8/multitor.8
@@ -33,7 +33,7 @@ A tool that lets you create multiple TOR instances with a load-balancing traffic
         set control port number
 
 --proxy <socks|http>
-        set tor load balancer
+        set load balancer
 .SH SEE ALSO
 https://github.com/trimstray/multitor
 .SH BUGS
