minor fixes: travis, man page, e-mail author - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/multitor.8
+++ b/doc/man8/multitor.8
@@ -1,5 +1,5 @@
 .\" Manpage for multitor.
-.\" Contact contact@nslab.at.
+.\" Contact trimstray@gmail.com.
 .TH man 8 "21.01.2018" "1.2.1" "multitor man page"
 .SH NAME
 multitor \- create multiple TOR instances
@@ -39,4 +39,4 @@ https://github.com/trimstray/multitor
 .SH BUGS
 No known bugs.
 .SH AUTHOR
-trimstray (contact@nslab.at)
+trimstray (trimstray@gmail.com)
