updated multitor version, minor updates in README.md - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/multitor.8
+++ b/doc/man8/multitor.8
@@ -1,6 +1,6 @@
 .\" Manpage for multitor.
 .\" Contact trimstray@gmail.com.
-.TH man 8 "21.01.2018" "1.2.1" "multitor man page"
+.TH man 8 "21.01.2018" "1.2.2" "multitor man page"
 .SH NAME
 multitor \- create multiple TOR instances
 .SH SYNOPSIS
@@ -13,6 +13,9 @@ A tool that lets you create multiple TOR instances with a load-balancing traffic
 
 --debug
         displays information on the screen (debug mode)
+
+--verbose
+        displays more information about TOR processes
 
 -i, --init <num>
         init new tor processes
