#6 - added -k|--kill param to stop all multitor processes - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/multitor.8
+++ b/doc/man8/multitor.8
@@ -20,6 +20,9 @@ A tool that lets you create multiple TOR instances with a load-balancing traffic
 -i, --init <num>
         init new tor processes
 
+-k, --kill
+        kill all multitor processes
+
 -s, --show-id
         show specific tor process id
 
