--- a/doc/man8/multitor.8
+++ b/doc/man8/multitor.8
@@ -38,8 +38,8 @@ A tool that lets you create multiple TOR instances with a load-balancing traffic
 --control-port <port_num>
         set control port number
 
---proxy <socks|privoxy|hpts>
-        set proxy server
+--proxy <proxy_type>
+        set proxy server (eg. socks, polipo, privoxy, hpts)
 .SH SEE ALSO
 https://github.com/trimstray/multitor
 .SH BUGS
