updated descriptions - signed-off-by: trimstray <trimstray@gmail.com>

--- a/static/man8/multitor.8
+++ b/static/man8/multitor.8
@@ -6,7 +6,7 @@ multitor \- create multiple TOR instances
 .SH SYNOPSIS
 multitor <option|long-option>
 .SH DESCRIPTION
-A tool that lets you create multiple TOR instances with a load-balancing traffic between them by HAProxy. It's provides one single endpoint for clients. In addition, you can view previously running TOR processes and create a new identity for all or selected processes.
+It's provides one single endpoint for clients. In addition, you can view previously running TOR processes and create a new identity for all or selected processes.
 .SH OPTIONS
 --help
         show this message
